--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}{% endblock %}</title>
-    <!-- Bootstrap core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="/">Home</a></li>
-            <li role="presentation"><a href="/about">About</a></li>
-            <li role="presentation"><a href="http://flask.pocoo.org" target="_blank">More About Flask</a></li>
-          </ul>
+        <!-- Brand -->
+    
+      <div class="navbar-header">
+        <nav class="navbar navbar-expand-sm navbar-dark" style="background:rgb(165, 52, 137);">
+            <a class="navbar-brand" href="#">WeConnect</a>
+            <div class="collapse navbar-collapse justify-content-end" id="nav-content">   
+                <ul class="navbar-nav pull-right">
+                    <li class="nav-item" role="Home Page"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item" role="About WeConnect"><a class="nav-link" href="/about">About</a></li>
+                    <li class="nav-item" role="registernewusers"><a class="nav-link" href="/business_catalog">Business Catalogue</a></li>
+                    <li class="nav-item" role="registernewusers"><a class="nav-link" href="/business_profile">Business Profile</a></li>
+                    <li class="nav-item" role="registernewusers"><a class="nav-link" href="/business_update">Update Business Profile</a></li>
+                    <li class="nav-item" role="registernewbusiness"><a class="nav-link" href="/business_registration">Add New business</a></li>
+                    <li class="nav-item" role="loginnewusers"><a class="nav-link" href="/user_login">Log In</a></li>
+                    <li class="nav-item" role="registernewusers"><a class="nav-link" href="/user_registration">Sign Up</a></li>
+                </ul>
+            </div>
         </nav>
       </div>
       {% block body %}
       {% endblock %}
+
       <footer class="footer">
-        <p>© 2016 Your Name Here</p>
+        <p class="pull-right">© 2018 WeConnect</p>
       </footer>
     </div> <!-- /container -->
   </body>
