--- a/app/templates/business_registration.html
+++ b/app/templates/business_registration.html
@@ -8,16 +8,17 @@
     <form action="#" class="form-inline">
         <label class="mr-sm-2 mb-0 sr-only" for="business_name">Business Name</label>
         <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="business_name" name="business_name" placeholder="Business name">
-        <br />
+        <label class="mr-sm-2 mb-0 sr-only" for="business_category">Business Category</label>
+        <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="business_category" name="business_category" placeholder="Business category">
         <label class="mr-sm-2 mb-0 sr-only" for="location">Location</label>
         <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="location" name="location" placeholder="Location">
         <button type="submit" class="btn btn-primary mt-2 mt-sm-0">Submit</button>
     </form>
 </div>
-
-    <!-- Optional JavaScript -->
+{% endblock %}
+<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-{% endblock %}
+
