New description fields to the business pages

--- a/app/templates/business_registration.html
+++ b/app/templates/business_registration.html
@@ -12,6 +12,8 @@
         <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="business_category" name="business_category" placeholder="Business category">
         <label class="mr-sm-2 mb-0 sr-only" for="location">Location</label>
         <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="location" name="location" placeholder="Location">
+        <label class="mr-sm-2 mb-0 sr-only" for="description">Description</label>
+        <input type="textarea" class="form-control mr-sm-2 mb-2 mb-sm-0" id="description" name="description" placeholder="Description">
         <button type="submit" class="btn btn-primary mt-2 mt-sm-0">Submit</button>
     </form>
 </div>
