--- a/app/templates/business_update.html
+++ b/app/templates/business_update.html
@@ -11,6 +11,10 @@
         <br />
         <label class="mr-sm-2 mb-0 sr-only" for="location">Location</label>
         <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="location" name="location" placeholder="Location">
+        <label class="mr-sm-2 mb-0 sr-only" for="location">Category</label>
+        <input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="category" name="category" placeholder="Category">
+        <label class="mr-sm-2 mb-0 sr-only" for="description">Description</label>
+        <input type="textarea" class="form-control mr-sm-2 mb-2 mb-sm-0" id="description" name="description" placeholder="Description">
         <button type="submit" class="btn btn-primary mt-2 mt-sm-0">Submit</button>
     </form>
 </div>
