--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="jumbotron">
   <h1>About WeConnect</h1>
-  <p class="lead">Info to be added.</p>
+  <p class="lead">Info to be added...</p>
 </div>
 {% endblock %}
 <!-- Optional JavaScript -->
